--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,10 +53,10 @@
             android:drawableStart="@drawable/ic_baseline_email_24"
             android:drawablePadding="6dp"
             android:enabled="false"
+            android:hint="@string/email"
             android:maxLines="1"
-            android:singleLine="true"
             android:nextFocusForward="@id/lastName_textInputLayout"
-            android:hint="@string/email" />
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -76,12 +76,12 @@
             android:id="@+id/firstNameTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:nextFocusForward="@id/phone_textInputLayout"
             android:drawableStart="@drawable/ic_baseline_person_24"
             android:drawablePadding="6dp"
+            android:hint="@string/first_name"
             android:maxLines="1"
-            android:singleLine="true"
-            android:hint="@string/first_name" />
+            android:nextFocusForward="@id/phone_textInputLayout"
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -91,7 +91,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/phone_textInputLayout"
+        app:layout_constraintBottom_toTopOf="@+id/collegeId_textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,9 +103,31 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_baseline_person_24"
             android:drawablePadding="6dp"
+            android:hint="@string/last_name"
             android:maxLines="1"
-            android:singleLine="true"
-            android:hint="@string/last_name" />
+            android:singleLine="true" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/collegeId_textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/phone_textInputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lastName_textInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_baseline_credit_card_24"
+            android:drawablePadding="6dp"
+            android:hint="@string/college_id" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -115,24 +137,24 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/done"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastName_textInputLayout">
+        app:layout_constraintTop_toBottomOf="@+id/collegeId_textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/phoneTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_baseline_local_phone_24"
-            android:inputType="phone"
             android:drawablePadding="6dp"
+            android:hint="@string/phone"
+            android:inputType="phone"
             android:maxLines="1"
-            android:singleLine="true"
-            android:hint="@string/phone" />
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <Button
         android:id="@+id/done"
